--- a/html/backend/layout.html
+++ b/html/backend/layout.html
@@ -42,7 +42,7 @@
             </v-app>
         </div>
 
-        <script src="backend/components.js"></script>
+        <script src="/backend/components.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
         <script>
             let vue = new Vue({
