Updated some icons

--- a/html/backend/comps.html
+++ b/html/backend/comps.html
@@ -42,33 +42,33 @@
                                                             <v-container>
                                                                 <v-row>
                                                                     <v-col cols="12" md="4">
-                                                                        <v-text-field v-model="itemEdit.name" label="Name" prepend-icon="mdi-account"></v-text-field>
+                                                                        <v-text-field v-model="itemEdit.name" label="Name" prepend-icon="mdi-tournament"></v-text-field>
                                                                     </v-col>
                                                                     <v-col cols="12" md="4">
-                                                                        <v-text-field v-model="itemEdit.tag" label="Abbreviation" prepend-icon="mdi-account"></v-text-field>
+                                                                        <v-text-field v-model="itemEdit.tag" label="Abbreviation" prepend-icon="mdi-tag"></v-text-field>
                                                                     </v-col>
                                                                     <v-col cols="12" md="4">
-                                                                        <v-switch v-model="itemEdit.officialCompetition" label="Official competiton" prepend-icon="mdi-account"></v-switch>
+                                                                        <v-switch v-model="itemEdit.officialCompetition" label="Official competiton" prepend-icon="mdi-toggle-switch"></v-switch>
                                                                     </v-col>
                                                                     <v-col cols="12" md="4">
-                                                                        <v-text-field v-model="itemEdit.challongeURL" label="Challonge URL" prepend-icon="mdi-account"></v-text-field>
+                                                                        <v-text-field v-model="itemEdit.challongeURL" label="Challonge URL" prepend-icon="mdi-link"></v-text-field>
                                                                     </v-col>
                                                                     <v-col cols="12" md="4">
-                                                                        <v-text-field v-model="itemEdit.hitmapsStatsURL" label="Hitmaps Stats URL" prepend-icon="mdi-account"></v-text-field>
+                                                                        <v-text-field v-model="itemEdit.hitmapsStatsURL" label="Hitmaps Stats URL" prepend-icon="mdi-link"></v-text-field>
                                                                     </v-col>
                                                                     <v-col cols="12" md="4">
-                                                                        <v-text-field type="number" v-model="itemEdit.sortingIndex" label="Sorting index" prepend-icon="mdi-account"></v-text-field>
+                                                                        <v-text-field type="number" v-model="itemEdit.sortingIndex" label="Sorting index" prepend-icon="mdi-sort-numeric-variant"></v-text-field>
                                                                     </v-col>
                                                                 </v-row>
                                                                 <v-row>
                                                                     <v-col cols="12" md="4">
-                                                                        <v-switch v-model="itemEdit.updateWithSheet" label="Update with sheet" prepend-icon="mdi-account"></v-switch>
+                                                                        <v-switch v-model="itemEdit.updateWithSheet" label="Update with sheet" prepend-icon="mdi-table-sync"></v-switch>
                                                                     </v-col>
                                                                     <v-col cols="12" md="4">
-                                                                        <v-text-field v-model="itemEdit.sheetId" label="Sheet ID" prepend-icon="mdi-account"></v-text-field>
+                                                                        <v-text-field v-model="itemEdit.sheetId" label="Sheet ID" prepend-icon="mdi-table-cog"></v-text-field>
                                                                     </v-col>
                                                                     <v-col cols="12" md="4">
-                                                                        <v-text-field v-model="itemEdit.tabName" label="Tab name" prepend-icon="mdi-account"></v-text-field>
+                                                                        <v-text-field v-model="itemEdit.tabName" label="Tab name" prepend-icon="mdi-tab"></v-text-field>
                                                                     </v-col>
                                                                 </v-row>
                                                                 <v-row>
