--- a/html/backend/matches.html
+++ b/html/backend/matches.html
@@ -43,7 +43,7 @@
                                                             <v-container>
                                                                 <v-row>
                                                                     <v-col cols="12" md="4">
-                                                                        <v-text-field v-model="itemEdit.competition" label="Competition" prepend-icon="mdi-format-list-bulleted"></v-text-field>
+                                                                        <v-text-field v-model="itemEdit.competition" label="Competition" prepend-icon="mdi-tournament"></v-text-field>
                                                                     </v-col>
                                                                     <v-col cols="12" md="4">
                                                                         <v-text-field v-model="itemEdit.platform" label="Platform/Bracket" prepend-icon="mdi-family-tree"></v-text-field>
