--- a/html/backend/matches.html
+++ b/html/backend/matches.html
@@ -317,7 +317,7 @@
                                 this.close();
                             } else {
                                 this.close();
-                                this.snackbarText = "An error occured while editing."
+                                this.snackbarText = `Error: ${response.data.error}`;
                                 this.snackbar = true;
                             }
                         } else {
@@ -330,7 +330,7 @@
                                 this.close();
                             } else {
                                 this.close();
-                                this.snackbarText = "An error occured while creating."
+                                this.snackbarText = `Error: ${response.data.error}`;
                                 this.snackbar = true;
                             }
                         }
@@ -359,7 +359,7 @@
                             this.closeDelete();
                         } else {
                             this.closeDelete();
-                            this.snackbarText = "An error occured while deleting.";
+                            this.snackbarText = `Error: ${response.data.error}`;
                             this.snackbar = true;
                         }
                     },
