--- a/html/backend/records.html
+++ b/html/backend/records.html
@@ -226,7 +226,7 @@
                         this.close();
                     } else {
                         this.close();
-                        this.snackbarText = "An error occured while editing.";
+                        this.snackbarText = `Error: ${response.data.error}`;
                         this.snackbar = true;
                     }
                 } else {
@@ -239,7 +239,7 @@
                         this.close();
                     } else {
                         this.close();
-                        this.snackbarText = "An error occured while creating."
+                        this.snackbarText = `Error: ${response.data.error}`;
                         this.snackbar = true;
                     }
                 }
@@ -259,7 +259,7 @@
                     this.closeDelete()
                 } else {
                     this.closeDelete();
-                    this.snackbarText = "An error occured while deleting.";
+                    this.snackbarText = `Error: ${response.data.error}`;
                     this.snackbar = true;
                 }
             },
